@@ -6,63 +6,80 @@ import com.library.dto.AuthorDTO;
 import com.library.mapper.AuthorMapper;
 import com.library.model.Author;
 import com.library.model.Book;
-import java.util.Arrays;
+
 import java.util.HashSet;
 import java.util.Set;
+import java.util.stream.Collectors;
+
 import org.junit.Test;
 
 public class AuthorMapperTest {
-
     private final AuthorMapper mapper = AuthorMapper.INSTANCE;
 
     @Test
-    public void testToDTO() {
-        // Подготовка модели Author с книгами
+    public void toDTO_WithBooks_ShouldMapToBookIds() {
+        // Given
         Author author = new Author();
         author.setId(1);
-        author.setName("John");
-        author.setSurname("Doe");
-        author.setCountry("USA");
+        author.setName("Test Author");
 
-        Book book1 = new Book();
-        book1.setId(100);
-        Book book2 = new Book();
-        book2.setId(101);
-        Set<Book> books = new HashSet<>(Arrays.asList(book1, book2));
+        Set<Book> books = new HashSet<>();
+        books.add(createBook(10));
+        books.add(createBook(20));
         author.setBooks(books);
 
-        // Преобразование в DTO
+        // When
         AuthorDTO dto = mapper.toDTO(author);
 
-        // Проверка полей
-        assertEquals(author.getId(), dto.getId());
-        assertEquals(author.getName(), dto.getName());
-        assertEquals(author.getSurname(), dto.getSurname());
-        assertEquals(author.getCountry(), dto.getCountry());
-        // Проверяем, что идентификаторы книг корректно сконвертировались
-        Set<Integer> expectedBookIds = new HashSet<>(Arrays.asList(100, 101));
-        assertEquals(expectedBookIds, dto.getBookIds());
+        // Then
+        assertEquals(1, dto.getId());
+        assertEquals("Test Author", dto.getName());
+        assertEquals(2, dto.getBookIds().size());
+        assertTrue(dto.getBookIds().containsAll(Set.of(10, 20)));
     }
 
     @Test
-    public void testToModel() {
-        // Создаем DTO с заполненными полями
-        AuthorDTO dto = new AuthorDTO();
-        dto.setId(2);
-        dto.setName("Jane");
-        dto.setSurname("Smith");
-        dto.setCountry("UK");
-        dto.setBookIds(new HashSet<>(Arrays.asList(200, 201)));
+    public void toDTO_WithNullBooks_ShouldReturnEmptyIds() {
+        Author author = new Author();
+        author.setId(2);
+        author.setBooks(null);
 
-        // Преобразование DTO в модель
+        AuthorDTO dto = mapper.toDTO(author);
+
+        assertTrue(dto.getBookIds().isEmpty());
+    }
+
+    @Test
+    public void toModel_WithBookIds_ShouldMapToBooksWithIds() {
+        AuthorDTO dto = new AuthorDTO();
+        dto.setId(3);
+        dto.setName("DTO Author");
+        dto.setBookIds(Set.of(30, 40));
+
         Author author = mapper.toModel(dto);
 
-        // Проверяем, что основные поля скопированы
-        assertEquals(dto.getId(), author.getId());
-        assertEquals(dto.getName(), author.getName());
-        assertEquals(dto.getSurname(), author.getSurname());
-        assertEquals(dto.getCountry(), author.getCountry());
-        // При обратном маппинге поле books игнорируется, поэтому ожидаем пустую коллекцию
+        assertEquals(3, author.getId());
+        assertEquals("DTO Author", author.getName());
+        assertEquals(2, author.getBooks().size());
+        assertTrue(author.getBooks().stream()
+                .map(Book::getId)
+                .collect(Collectors.toSet())
+                .containsAll(Set.of(30, 40)));
+    }
+
+    @Test
+    public void toModel_WithNullIds_ShouldHaveEmptyBooks() {
+        AuthorDTO dto = new AuthorDTO();
+        dto.setBookIds(null);
+
+        Author author = mapper.toModel(dto);
+
         assertTrue(author.getBooks().isEmpty());
+    }
+
+    private Book createBook(int id) {
+        Book book = new Book();
+        book.setId(id);
+        return book;
     }
 }
