@@ -7,74 +7,94 @@ import com.library.mapper.BookMapper;
 import com.library.model.Author;
 import com.library.model.Book;
 import com.library.model.Publisher;
-import java.util.Arrays;
-import java.util.HashSet;
+
 import java.util.Set;
+import java.util.stream.Collectors;
+
 import org.junit.Test;
 
 public class BookMapperTest {
-
     private final BookMapper mapper = BookMapper.INSTANCE;
 
     @Test
-    public void testToDTO() {
-        // Подготавливаем модель Book с издателем и авторами
+   public void toDTO_WithFullData_ShouldMapCorrectly() {
         Book book = new Book();
         book.setId(1);
         book.setTitle("Test Book");
-        book.setPublishedDate("2025-03-27");
-        book.setGenre("Fiction");
 
         Publisher publisher = new Publisher();
-        publisher.setId(10);
+        publisher.setId(100);
         book.setPublisher(publisher);
 
-        Author author1 = new Author();
-        author1.setId(100);
-        Author author2 = new Author();
-        author2.setId(101);
-        Set<Author> authors = new HashSet<>(Arrays.asList(author1, author2));
-        book.setAuthors(authors);
+        book.setAuthors(Set.of(createAuthor(10), createAuthor(20)));
 
-        // Преобразуем модель в DTO
         BookDTO dto = mapper.toDTO(book);
 
-        // Проверяем основные поля
-        assertEquals(book.getId(), dto.getId());
-        assertEquals(book.getTitle(), dto.getTitle());
-        assertEquals(book.getPublishedDate(), dto.getPublishedDate());
-        assertEquals(book.getGenre(), dto.getGenre());
-        // Проверяем, что id издателя корректно сконвертировался
-        assertEquals((Integer) publisher.getId(), dto.getPublisherId());
-        // Проверяем преобразование списка авторов в набор идентификаторов
-        Set<Integer> expectedAuthorIds = new HashSet<>(Arrays.asList(100, 101));
-        assertEquals(expectedAuthorIds, dto.getAuthorIds());
+        assertEquals(1, dto.getId());
+        assertEquals("Test Book", dto.getTitle());
+        assertEquals(Integer.valueOf(100), dto.getPublisherId());
+        assertTrue(dto.getAuthorIds().containsAll(Set.of(10, 20)));
     }
 
     @Test
-    public void testToModel() {
-        // Создаем DTO с заполненными полями
+    public void toDTO_WithNullCollections_ShouldReturnEmptyIds() {
+        Book book = new Book();
+        book.setAuthors(null);
+        book.setPublisher(null);
+
+        BookDTO dto = mapper.toDTO(book);
+
+        assertNull(dto.getPublisherId());
+        assertTrue(dto.getAuthorIds().isEmpty());
+    }
+
+    @Test
+    public void toModel_WithFullData_ShouldMapCorrectly() {
         BookDTO dto = new BookDTO();
         dto.setId(2);
-        dto.setTitle("Another Book");
-        dto.setPublishedDate("2025-04-01");
-        dto.setGenre("Mystery");
-        dto.setPublisherId(20);
-        Set<Integer> authorIds = new HashSet<>(Arrays.asList(200, 201));
-        dto.setAuthorIds(authorIds);
+        dto.setTitle("DTO Book");
+        dto.setPublisherId(200);
+        dto.setAuthorIds(Set.of(30, 40));
 
-        // Преобразование DTO в модель
         Book book = mapper.toModel(dto);
 
-        // Проверяем основные поля
-        assertEquals(dto.getId(), book.getId());
-        assertEquals(dto.getTitle(), book.getTitle());
-        assertEquals(dto.getPublishedDate(), book.getPublishedDate());
-        assertEquals(dto.getGenre(), book.getGenre());
-        // Из-за настройки маппера, поле publisher создается с id, а остальные поля остаются null
-        assertNotNull(book.getPublisher());
-        assertEquals((Integer) dto.getPublisherId(), (Integer) book.getPublisher().getId());
-        // При обратном преобразовании поле authors игнорируется – ожидаем, что коллекция пуста
+        assertEquals(2, book.getId());
+        assertEquals("DTO Book", book.getTitle());
+        assertEquals(200, book.getPublisher().getId());
+        assertEquals(2, book.getAuthors().size());
+        assertTrue(book.getAuthors().stream()
+                .map(Author::getId)
+                .collect(Collectors.toSet())
+                .containsAll(Set.of(30, 40)));
+    }
+
+    @Test
+    public void toModel_WithNullCollections_ShouldHaveEmptyRelations() {
+        BookDTO dto = new BookDTO();
+        dto.setAuthorIds(null);
+        dto.setPublisherId(null);
+
+        Book book = mapper.toModel(dto);
+
+        assertNull(book.getPublisher());
         assertTrue(book.getAuthors().isEmpty());
+    }
+
+    @Test
+    public void mapAuthorIdsToAuthors_WithNullInput_ShouldReturnEmptySet() {
+        Set<Author> result = BookMapper.mapAuthorIdsToAuthors(null);
+        assertTrue(result.isEmpty());
+    }
+
+    @Test
+    public void mapAuthorsToAuthorIds_WithNullInput_ShouldReturnEmptySet() {
+        Set<Integer> result = BookMapper.mapAuthorsToAuthorIds(null);
+        assertTrue(result.isEmpty());
+    }
+
+    private Author createAuthor(int id) {
+        Author author = new Author();
+        author.setId(id);
+        return author;
     }
 }
